[package]
authors = ["Aaron Power <theaaronepower@gmail.com>"]
categories = ["web-programming", "parser-implementations"]
description = "A wrapper around the Mastodon API."
keywords = ["turtle", "parser", "rdf"]
license = "MIT/Apache-2.0"
name = "chelone"
repository = "https://github.com/Aaronepower/chelone.git"
version = "0.1.2"

[dependencies]
pest = "1"
pest_derive = "1"
url = "1"
itertools = "0.7"
petgraph = "0.4"

[build-dependencies]
chelone = { git = "https://github.com/Aaronepower/chelone" branch = "bootstrap" }
url = "1"
